--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,9 +8,9 @@
 }
 
 .App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
+  background-color: rgb(251, 0, 0);
+  height: 50px;
+  padding: 10px;
   color: white;
 }
 
@@ -20,6 +20,34 @@
 
 .App-intro {
   font-size: large;
+}
+
+.content {
+  display: flex;
+}
+
+p {
+  font-size: 0.6em;
+}
+
+.visitedLocations {
+  border: 2px solid black;
+  border-radius: 5px;
+  margin: 1em;
+  padding: 1em;
+}
+
+h3 {
+  margin-bottom: .5em;
+}
+
+h6 {
+  font-size: .6em;
+  margin: .5em 0 .7em 0;
+}
+
+time {
+  font-size: .6em;
 }
 
 @keyframes App-logo-spin {
