--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,13 @@
-body {
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
+
+html, body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Open Sans', sans-serif;
+  height: 100%;
+}
+
+#root{
+  height: 100%;
 }
