--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,6 +8,7 @@
 
 .App {
   text-align: center;
+  
 }
 
 .App-logo {
@@ -26,6 +27,8 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .splash-app button{
@@ -37,6 +40,8 @@
 
 .main-logo{
   width: 100%;
+  max-height: 34em;
+  max-width: 34em;
 }
 
 .App-title {
@@ -78,4 +83,11 @@ time {
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+.logout-button{
+  font-size:0.8em;
+  text-decoration: underline;
+  margin-left:1em;
+  
 }
